# cloud-dev

./: .gitignore  .gitmodules  README.md
.quarkus/cli/plugins/: quarkus-cli-catalog.json
clojure-dev/getting-started/: README.md
elm-dev/animal-health-app/src/: Main.elm
go-dev/hello/: hello.go
haskell-dev/getting-started/caesar/: caesar.cabal
haskell-dev/programming/widgets/: widgetpage.hs
haskell-dev/web-apps/notes/: ROUTING.md  TERM.md
java-dev/qute/: NOTES.md
java-dev/qute/hello/: README.md  pom.xml
java-dev/smallrye-stork/: ARCH.md  README.md
java-dev/ui-ux/ui-app/: README.md  build.gradle.kts  settings.gradle.kts
java-dev/vertx-apps/vertx-web/: REFNOTES.md
kotlin-projects/getting-started/: settings.gradle.kts
kotlin-projects/getting-started/app/: build.gradle.kts
python-dev/pages/DOM-API/: app.py
python-dev/test-gradio/: script.py
python-zen/app-dev/: DOCS.md
python-zen/app-dev/api_with_json/: README.md  pyproject.toml
python-zen/app-dev/cookies/: README.md  pyproject.toml
python-zen/app-dev/hooking_in_wsgi_middleware/: README.md  pyproject.toml
python-zen/app-dev/redirects_n_errors/: README.md  pyproject.toml
python-zen/app-dev/requests/: README.md  pyproject.toml
python-zen/app-dev/responses/: README.md  pyproject.toml
python-zen/rye-project/: README.md  pyproject.toml
python-zen/rye-project/src/rye_app/: __init__.py
python-zen/spa/app/: app.py
rust-dev/cli-apps/: README.md
rust-dev/getting-started/: README.md
tekton/minikube/: JAVA_NOTES.md  SIDE_NOTES.md  hello-deployment.yaml  java-deployment.yaml
(+147 files in other folders)
